--- a/sobre.html
+++ b/sobre.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <img src="img/logo.svg" alt="MusicDot" />
-    <h1>Sobre a empresa</h1>
+    <h1 class="titulo">Sobre a empresa</h1>
     <p>
       A MusicDot é a maior escola online de música em todo o mundo. Fundada em
       1932, possui estúdios em 124 países, sendo líder de mercado com mais de
@@ -38,7 +38,7 @@ renciais"
       >.
     </p>
 
-    <h2 id="historia">História</h2>
+    <h2 id="historia" class="subtitulo">História</h2>
 
     <figure class="familia-tupfeln">
       <img src="img/familia-tupfeln.jpg" alt="Foto da família tüpfeln" />
@@ -74,7 +74,7 @@ renciais"
       presidentes da União Européia, Ásia e o secretário-geral da ONU.
     </p>
 
-    <h2 id="diferenciais">Diferenciais</h2>
+    <h2 id="diferenciais" class="subtitulo">Diferenciais</h2>
 
     <ul>
       <li>Menor preço do mercado, garantido</li>
@@ -92,6 +92,8 @@ renciais"
       <li>Presente em 124 países</li>
       <li>Mais de um milhão de funcionários em todo o mundo</li>
     </ul>
+
+    <h2 class="titulo">Contato</h2>
   </body>
 </html>
 <!--<!DOCTYPE html>
