--- a/sobre.html
+++ b/sobre.html
@@ -18,13 +18,15 @@
     <p>
       Nossa matriz fica em
       <a href="https://maps.google.com.br/?q=190,GabrielDequech,Mafra,SC">
-        Mafra, em Santa Catarina </a
+        # sobre.html Mafra, em Santa Catarina </a
       >. De lá, saem grande parte das gravações de nossos cursos. Nossa matr iz:
     </p>
+
     <figure class="matriz-musicdot">
       <img src="img/matriz-musicdot.png" alt="Matriz da musicdot" />
       <figcaption>Matriz MusicDot</figcaption>
     </figure>
+
     <p>
       Assine os cursos da MusicDot. Acesse
       <a href="index.html"> nosso site </a> ou entre em con tato se tiver
@@ -36,17 +38,20 @@ renciais"
         nossos diferenciais </a
       >.
     </p>
+
     <h2 id="historia" class="subtitulo">História</h2>
+
     <figure class="familia-tupfeln">
       <img src="img/familia-tupfeln.jpg" alt="Foto da família tüpfeln" />
       <figcaption>Família Tüpfeln</figcaption>
     </figure>
+
     <p>
       A fundação em 1932 ocorreu no momento da descoberta econônica de cursos
       por stream online no interior de Santa Catarina. A família Tüpfeln,
       tradicional da região, investiu todas as suas economias nessa nova inicia
       tiva, revolucionária para a época. A fundadora frau Dagmar Olaf Tüpfeln,
-      dotada de particular visão administrativa, guiou os negócios da empresa
+      dotada de particular vi são administrativa, guiou os negócios da empresa
       durante mais de 50 anos, muitos deles ao lado de seu filho Ernst Noten
       Tüpfeln, atual CEO. O nome da empresa é inspirado no nome da famí lia.
     </p>
@@ -69,7 +74,9 @@ renciais"
       presidentes do Brasil já visitaram as instalações da MusicDot, além de
       presidentes da União Européia, Ásia e o secretário-geral da ONU.
     </p>
+
     <h2 id="diferenciais" class="subtitulo">Diferenciais</h2>
+
     <ul>
       <li>Menor preço do mercado, garantido</li>
       <li>Se você achar um serviço mais barato, leva 1 mês de graça</li>
@@ -86,7 +93,9 @@ renciais"
       <li>Presente em 124 países</li>
       <li>Mais de um milhão de funcionários em todo o mundo</li>
     </ul>
+
     <h2 class="titulo">Contato</h2>
+
     <div class="contato__secao">
       <h3 class="contato__subtitulo">Correspondência</h3>
       <small> (todos os dias, das 9h às 18h) </small>
@@ -100,6 +109,7 @@ renciais"
         São Paulo - SP
       </address>
     </div>
+
     <div class="contato__secao contato__secao--telefone">
       <h3 class="contato__subtitulo">Telefones</h3>
       <small> (segunda à sexta, das 9h às 18h) </small>
