--- a/index.html
+++ b/index.html
@@ -1,5 +1,32 @@
-<h1>Página principal temporária da MusicDot</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>Musicdot</title>
+    <link rel="icon" href="img/favicon.ico" />
+  </head>
+  <body>
+    <header>
+      <a href="index.html">
+        <img
+          src="img/musicdot-logo-light.svg"
+          title="Ir para a página inicial da Musicdot"
+          alt="Musicdot"
+        />
+      </a>
 
-MusicDot Bem-vindo à MusicDot, seu portal de cursos de música online. Confira
-nossas promoções. Receba informações sobre nossos lançamentos por email. Navegue
-por todos nossos cursos disponíveis. Aprenda sem sair de casa.
+      <nav>
+        <ul>
+          <li><a href="sobre.html#contato"> Contato </a></li>
+          <li><a href="#"> Entrar </a></li>
+          <li><a href="#"> Matricule-se </a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <main>Conteúdo principal</main>
+
+    <footer>Rodapé</footer>
+  </body>
+</html>
