--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/cabecalho.css" />
     <link rel="stylesheet" href="css/cursos.css" />
     <link rel="stylesheet" href="css/video.css" />
+    <link rel="stylesheet" href="css/planos.css" />
     <link rel="stylesheet" href="css/rodape.css" />
     <link rel="stylesheet" href="css/form-newsletter.css" />
   </head>
@@ -73,7 +74,6 @@ nicial da Musicdot"
             <li class="curso--canto curso--destaque2">
               <a href="#">Canto</a>
             </li>
-
             <li class="curso--audio">
               <a href="#">Áudio</a>
             </li>
@@ -89,15 +89,49 @@ nicial da Musicdot"
           </ul>
         </nav>
       </section>
-      </section>
       <section class="video">
-        <video controls class="video--mobile" src="video/video-promocional.mp4" poster="img/vid
-      eo-principal-mobile.png"></video>
-        <video controls class="video--desktop" src="video/video-promocional.mp4" poster="img/vid
-      eo-principal.png"></video>
+        <video
+          controls
+          class="video--mobile"
+          src="video/video-promocional.mp4"
+          poster="img/vid
+eo-principal-mobile.png"
+        ></video>
+        <video
+          controls
+          class="video--desktop"
+          src="video/video-promocional.mp4"
+          poster="img/vid
+eo-principal.png"
+        ></video>
         <article class="video__textos">
-        <h2 class="textos__titulo">Estude com os melhores professores</h2>
-        <p>Aprenda no seu ritmo, sem sair de casa</p>
+          <h2 class="textos__titulo">Estude com os melhores professores</h2>
+          <p>Aprenda no seu ritmo, sem sair de casa</p>
+        </article>
+      </section>
+      <section class="planos">
+        <h2 class="planos__titulo">Acesso ilimitado a todos os cursos</h2>
+        <article class="cards__planoanual">
+          <span class="plano--destaque"> Assinado</span>
+          <div class="planos__card card--anual">
+            <h3 class="plano__titulo">Plano Anual</h3>
+            <p>12x <span class="valor--destaque">R$ 50,00</span></p>
+            <p>Valor total de R$ 600,00</p>
+            <span>Acesso à Alura Língua</span>
+            <a href="cursos.html" class="cards__botao botao">Matricule-se</a>
+          </div>
+        </article>
+        <article class="planos__card card--semestral">
+          <h3 class="plano__titulo">Plano Semestral</h3>
+          <p>12x <span class="valor--destaque">R$ 60,00</span></p>
+          <p>Valor total de R$ 360,00</p>
+          <a href="cursos.html" class="cards__botao botao">Matricule-se</a>
+        </article>
+        <article class="planos__pagamentos">
+          <p>Pagamento seguro com PayPal</p>
+          <p>
+            Oferecemos boleto à vista, <a href="#">basta entrar em contato</a>
+          </p>
         </article>
       </section>
     </main>
@@ -156,7 +190,6 @@ nicial da Musicdot"
             <li class="rodape_item-lista"><a href="#">Cursos de Áudio</a></li>
             <li class="rodape_item-lista"><a href="#">Cursos de Teoria</a></li>
             <li class="rodape_item-lista"><a href="#">Cursos de Sopro</a></li>
-
             <li class="rodape_item-lista"><a href="#">Cursos de Cordas</a></li>
           </ul>
         </nav>
