--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="css/video.css" />
     <link rel="stylesheet" href="css/planos.css" />
     <link rel="stylesheet" href="css/beneficios.css" />
+    <link rel="stylesheet" href="css/chamada-youtube.css" />
     <link rel="stylesheet" href="css/rodape.css" />
     <link rel="stylesheet" href="css/form-newsletter.css" />
   </head>
@@ -174,6 +175,44 @@ eo-principal.png"
             </p>
           </li>
         </ul>
+      </section>
+      <section class="chamada__youtube">
+        <article
+          class="chamada__youtube__canal youtube__informacao icone--youtube --largura-gra nde"
+        >
+          <h2 class="canal__titulo">Nosso canal no YouTube</h2>
+          <p class="canal__texto">
+            Cursos online de Teclado, Piano, Canto, Violão, Guitarra, Teor ia
+            Musical e mais!
+          </p>
+          <a
+            href="https://www.youtube.com/user/musicdotonline"
+            class="canal__button botao"
+            >Ver Canal</a
+          >
+        </article>
+        <article class="chamada__youtube__canal chamada__youtube--video1">
+          <a class="video__descricao" href="#">
+            <h2 class="descricao__titulo">
+              Aula de Canto para Iniciantes (dicas básicas)
+            </h2>
+            <p class="descricao__texto">
+              Nessa aula a professora Anny Cee dá as primeiras dicas p ara você
+              começar o seu estudo do Canto.
+            </p>
+          </a>
+        </article>
+        <article class="chamada__youtube__canal chamada__youtube--video2">
+          <a class="video__descricao" href="#">
+            <h2 class="descricao__titulo">
+              Toque teclado em 10 minutos! (Aula de teclado para ini ciantes)
+            </h2>
+            <p class="descricao__texto">
+              Essa é a primeira aula do curso de teclado da MusicDot. Aqui você
+              aprenderá a nomear todas...
+            </p>
+          </a>
+        </article>
       </section>
     </main>
     <footer class="rodape container">
